--- a/flaskrrd/templates/index.html
+++ b/flaskrrd/templates/index.html
@@ -1,30 +1,11 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="alert alert-success">
-<button type="button" class="close" data-dismiss="alert">&times;</button>
-<strong>Yay!</strong> Everything looks like it is working.
-</div>
 
-<h1>
-Hello, world!
-</h1>
+<br>
 
-<b>I was rendered using Jinja2 templates!</b>
+<img src="{{ png_url }}" />
 
-<table class="table">
-<tr>
-  <th>index</th>
-  <th>message</th>
-</tr>
-<tbody>
-{% for m in messages %}
-  <tr>
-    <td>{{ m.id }}</td>
-    <td><pre>{{ m.message }}</pre></td>
-  </tr>
-{% endfor %}
-</tbody>
-</table>
+<br>
 
 {% endblock %}
