Add a /dashboard route
The /dashboard route just prints out all RRD that this database knows
about, which makes it more convient for look'in at.

--- a/flaskrrd/templates/index.html
+++ b/flaskrrd/templates/index.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-<br>
 
+{% for png_url in png_urls %}
+<br>
 <img src="{{ png_url }}" />
-
 <br>
+{% endfor %}
 
 {% endblock %}
